--- a/src/main/resources/static/dishes.html
+++ b/src/main/resources/static/dishes.html
@@ -2,9 +2,87 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Блюда и меню</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="js/dishes.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
+<form method="get">
+    <p><strong>Добавление блюда</strong></p>
+    <p><input id="about" type="text" maxlength="50" placeholder="Название" size="25"></p>
+    <p><input id="name" maxlength="50" type="text" placeholder="Описание" size="25"></p>
+    <p><input id="seasonal" type="checkbox" size="25"> <label for="seasonal">Сезонное блюдо</label></p>
+    <p><select id="products" multiple></select></p>
+    <button onclick="add()" type="reset">Добавить блюдо</button>
+</form>
+<hr>
 
+
+<form>
+    <p><strong>Поиск блюда по</strong></p>
+    <p>
+        <select id="selector" onchange="selectorChanged(this)">
+            <option value="0">Выберите опцию</option>
+            <option value="1">Уникальному номеру</option>
+            <option value="2">Названию</option>
+        </select>
+    </p>
+    <p><input id="find-by-name" maxlength="50" placeholder="Название" size="25" style="display: none">
+        <input id="find-by-id" maxlength="20" placeholder="Уникальный номер" size="25" style="display: none"></p>
+    <p><button onclick="find()" type="button">Найти</button></p>
+    <p><table id="found-table" style="display: none">
+    <thead>
+    <tr>
+        <th>Уникальный номер</th>
+        <th>Название</th>
+        <th>Описание</th>
+        <th>Сезонность</th>
+        <th>Список продуктов</th>
+    </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+</table></p>
+</form>
+<hr>
+
+
+<p><strong>Обновить данные</strong></p>
+<p>Чтобы обновить данные блюда - найдите его и нажмите кнопку "Изменить" ниже</p>
+<button onclick="readyForUpdate()" type="button">Изменить</button>
+<p><input id="about_update" type="text" maxlength="50" placeholder="Название" size="25"></p>
+<p><input id="name_update" maxlength="50" type="text" placeholder="Описание" size="25"></p>
+<p><input id="seasonal_update" type="checkbox" size="25"> <label for="seasonal">Сезонное блюдо</label></p>
+<p><select id="products_update" multiple></select></p>
+<button id="update" onclick="update()" type="reset" style="display: none">Обновить данные</button>
+<hr>
+
+
+<p><strong>Просмотреть все блюда</strong></p>
+<p><button id="getProducts" onclick="getAll()" type="button">Показать всё</button></p>
+<p><table id="table" style="display: none">
+    <thead>
+    <tr>
+        <th>Уникальный номер</th>
+        <th>Название</th>
+        <th>Описание</th>
+        <th>Сезонность</th>
+        <th>Список продуктов</th>
+    </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+</table></p>
+<hr>
+
+
+<p><strong>Удалить данные</strong></p>
+<p>Чтобы удалить блюдо - введите его уникальный номер, чтобы удалить всё меню - нажмите кнопку "Удалить всё"</p>
+<p><input id="delete_by_id" maxlength="50" placeholder="Уникальный номер" size="25"></p>
+<button onclick="deleteById()" type="reset">Удалить блюдо</button>
+<button onclick="deleteAll()" type="button">Удалить всё</button>
 </body>
 </html>
