--- a/src/main/resources/static/employees.html
+++ b/src/main/resources/static/employees.html
@@ -2,9 +2,137 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Работники и персонал</title>
+    <link rel="stylesheet" href="employees.css">
+    <script src="js/employees.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
+<form>
+    <p><strong>Добавление работника</strong></p>
+    <table>
+        <tr>
+            <td><input id="name" type="text" maxlength="50" placeholder="Имя" size="25" required></td>
+            <td><input id="surname" type="text" maxlength="50" placeholder="Фамилия" size="25" required></td>
+            <td><input id="patronymic" type="text" maxlength="50" placeholder="Отчество" size="25"></td>
+        </tr>
+    </table>
+    <p><label>Дата рождения </label><input required id="birthDate" type="date" placeholder="Дата рождения" size="25"></p>
+    <p><label>Пол </label><select required id="sex">
+        <option disabled>Выберите пол</option>
+        <option value="Мужской">Мужской</option>
+        <option value="Женский">Женский</option>
+    </select></p>
+    <p><input required id="passport" type="text" pattern="[0-9]{10}" placeholder="Номер паспорта" size="25"></p>
+    <p><label>Дата трудоустройства </label><input required id="employmentDate" type="date" placeholder="Дата трудоустройства" size="25"></p>
+    <p><input id="phone" type="tel" maxlength="11" placeholder="Номер телефона" size="25" minlength="7"></p>
+    <p><label>Должность </label><select required id="position"></select></p>
+    <p><label for="hours">Кол-во отработанных часов (мес.) </label><input id="hours" type="number" maxlength="50" placeholder="Часы" min="0"></p>
+    <button onclick="add()" type="submit">Добавить работника</button>
+</form>
+<hr>
 
+
+<form>
+    <p><strong>Поиск работника по</strong></p>
+    <p>
+        <select id="selector" onchange="selectorChanged(this)">
+            <option value="0" disabled>Выберите опцию</option>
+            <option value="1">Уникальному номеру</option>
+            <option value="2">ФИО</option>
+            <option value="3">Номеру паспорта</option>
+        </select>
+    </p>
+    <p><input id="find-by-id" maxlength="50" placeholder="Уникальный номер" size="25" style="display: none">
+        <input id="find-by-passport" maxlength="10" placeholder="Номер паспорта" size="25" style="display: none"></p>
+    <table id="find-fio-table" style="display: none">
+        <tr>
+            <td><input id="find-by-name" maxlength="80" placeholder="Имя" size="25" style="display: block"></td>
+            <td><input id="find-by-surname" maxlength="80" placeholder="Фамилия" size="25" style="display: block"></td>
+            <td><input id="find-by-patronymic" maxlength="80" placeholder="Отчество" size="25" style="display: block"></td>
+        </tr>
+    </table>
+    <p><button onclick="find()" type="button">Найти</button></p>
+    <p><table id="found-table" style="display: none">
+    <thead>
+    <tr>
+        <th>Уникальный номер</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Отчество</th>
+        <th>Дата рождения</th>
+        <th>Пол</th>
+        <th>Номер паспорта</th>
+        <th>Дата трудоустройства</th>
+        <th>Номер телефона</th>
+        <th>Должность</th>
+        <th>Кол-во отработанных часов (месяц)</th>
+    </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+</table></p>
+</form>
+<hr>
+
+
+<p><strong>Обновить данные</strong></p>
+<p>Чтобы обновить данные работника - найдите его и нажмите кнопку "Изменить" ниже</p>
+<p><button onclick="readyForUpdate()" type="button">Изменить</button></p>
+<form id="update_form" style="display: none">
+    <table>
+        <tr>
+            <td><input required id="name_update" type="text" maxlength="50" placeholder="Имя" size="25"></td>
+            <td><input required id="surname_update" type="text" maxlength="50" placeholder="Фамилия" size="25"></td>
+            <td><input required id="patronymic_update" type="text" maxlength="50" placeholder="Отчество" size="25"></td>
+        </tr>
+    </table>
+    <p><label>Дата рождения </label><input required id="birthDate_update" type="date" placeholder="Дата рождения" size="25"></p>
+    <p><label>Пол </label><select required id="sex_update">
+        <option value="0" disabled>Выберите пол</option>
+        <option value="Мужской">Мужской</option>
+        <option value="Женский">Женский</option>
+    </select></p>
+    <p><input required id="passport_update" type="text" pattern="[0-9]{10}" placeholder="Номер паспорта" size="25"></p>
+    <p><label>Дата трудоустройства </label><input required id="employmentDate_update" type="date" placeholder="Дата трудоустройства" size="25"></p>
+    <p><input id="phone_update" type="tel" maxlength="11" placeholder="Номер телефона" size="25" minlength="7"></p>
+    <p><label>Должность </label><select required id="position_update"></select></p>
+    <p><label for="hours">Кол-во отработанных часов (мес.) </label><input id="hours_update" type="number" maxlength="50" placeholder="Часы" min="0"></p>
+
+    <button id="update" onclick="update()" type="reset">Обновить данные</button>
+</form>
+<hr>
+
+
+<p><strong>Просмотреть всех работников</strong></p>
+<p><button id="getAll" onclick="getAll()" type="button">Показать всё</button></p>
+<p><table id="table" style="display: none">
+    <thead>
+    <tr>
+        <th>Уникальный номер</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Отчество</th>
+        <th>Дата рождения</th>
+        <th>Пол</th>
+        <th>Номер паспорта</th>
+        <th>Номер телефона</th>
+        <th>Должность</th>
+        <th>Кол-во отработанных часов (месяц)</th>
+    </tr>
+    </thead>
+    <tbody>
+
+    </tbody>
+</table></p>
+<hr>
+
+
+<p><strong>Удалить данные</strong></p>
+<p>Чтобы удалить работника - введите его уникальный номер, чтобы удалить всех - нажмите кнопку "Удалить всё"</p>
+<p><input id="delete_by_id" maxlength="50" placeholder="Уникальный номер" size="25"></p>
+<button onclick="deleteById()" type="reset">Удалить блюдо</button>
+<button onclick="deleteAll()" type="button">Удалить всё</button>
 </body>
 </html>
