--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <body>
 <h3>Здравствуйте! С чем желаете поработать?</h3>
 <p><a href="products.html">Продукты</a></p>
-<p><a href="dishes.html">Блюда</a></p>
+<p><a href="dishes.html">Меню</a></p>
 <p><a href="positions.html">Позиции и должности</a></p>
 <p><a href="employees.html">Работники и персонал</a></p>
 <p><a href="restaurants.html">Рестораны сети</a></p>
