--- a/src/main/resources/static/products.html
+++ b/src/main/resources/static/products.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Продукты</title>
-    <link rel="stylesheet" href="style.css">
+    <link href="style.css" rel="stylesheet">
     <script src="js/products.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
 <form method="get">
     <p><strong>Добавление продукта</strong></p>
-    <p><input id="product_name" maxlength="50" placeholder="Название продукта" size="25"></p>
+    <p><input id="product_name" maxlength="50" placeholder="Название продукта" required size="25"></p>
     <p><textarea cols="25" id="product_about" placeholder="Описание продукта" rows="5"></textarea></p>
     <button id="product_add" onclick="add()" type="reset">Добавить продукт</button>
 </form>
@@ -27,9 +27,13 @@
         </select>
     </p>
     <p><input id="find-by-name" maxlength="50" placeholder="Название продукта" size="25" style="display: none">
-        <input id="find-by-id" maxlength="20" placeholder="Уникальный номер продукта" size="25" style="display: none"></p>
-    <p><button id="product_find" onclick="find()" type="button">Найти продукт</button></p>
-    <p><table id="products-found-table" style="display: none">
+        <input id="find-by-id" maxlength="20" placeholder="Уникальный номер продукта" size="25" style="display: none">
+    </p>
+    <p>
+        <button id="product_find" onclick="find()" type="button">Найти продукт</button>
+    </p>
+    <p>
+    <table id="products-found-table" style="display: none">
         <thead>
         <tr>
             <th>Уникальный номер</th>
@@ -40,7 +44,8 @@
         <tbody>
 
         </tbody>
-    </table></p>
+    </table>
+    </p>
 </form>
 <hr>
 
@@ -49,14 +54,18 @@
 <p>Чтобы обновить данные продукта - найдите его и нажмите кнопку "Изменить" ниже</p>
 <button onclick="readyForUpdate()" type="button">Изменить</button>
 <p><input id="product_name_update" maxlength="50" placeholder="Название продукта" size="25" style="display: none"></p>
-<p><textarea cols="25" id="product_about_update" placeholder="Описание продукта" rows="5" style="display: none"></textarea></p>
-<button id="product_update" onclick="update()" type="reset" style="display: none">Обновить продукт</button>
+<p><textarea cols="25" id="product_about_update" placeholder="Описание продукта" rows="5"
+             style="display: none"></textarea></p>
+<button id="product_update" onclick="update()" style="display: none" type="reset">Обновить продукт</button>
 <hr>
 
 
 <p><strong>Просмотреть все продукты</strong></p>
-<p><button id="getProducts" onclick="getAll()" type="button">Показать все продукты</button></p>
-<p><table id="products-table" style="display: none">
+<p>
+    <button id="getProducts" onclick="getAll()" type="button">Показать все продукты</button>
+</p>
+<p>
+<table id="products-table" style="display: none">
     <thead>
     <tr>
         <th>Уникальный номер</th>
@@ -67,7 +76,8 @@
     <tbody>
 
     </tbody>
-</table></p>
+</table>
+</p>
 <hr>
 
 
