--- a/src/main/resources/static/dishes.html
+++ b/src/main/resources/static/dishes.html
@@ -11,7 +11,7 @@
 <form method="get">
     <p><strong>Добавление блюда</strong></p>
     <p><input id="name" maxlength="50" placeholder="Название" required size="25" type="text"></p>
-    <p><input id="price" maxlength="5" placeholder="Цена" required size="25" type="number"></p>
+    <p><input id="price" maxlength="5" placeholder="Цена" required size="25" type="number" min="0"></p>
     <p><textarea cols="25" id="about" placeholder="Описание" rows="5"></textarea></p>
     <p><input id="seasonal" size="25" type="checkbox"> <label for="seasonal">Сезонное блюдо</label></p>
     <p>
