--- a/src/main/resources/static/dishes.html
+++ b/src/main/resources/static/dishes.html
@@ -66,7 +66,7 @@
 <p>Чтобы обновить данные блюда - найдите его и нажмите кнопку "Изменить" ниже</p>
 <button onclick="readyForUpdate()" type="button">Изменить</button>
 <p><input id="name_update" maxlength="50" placeholder="Название" size="25" style="display: none" type="text"></p>
-<p><input id="price_update" maxlength="5" placeholder="Цена" required size="25" type="number"></p>
+<p><input id="price_update" maxlength="5" placeholder="Цена" required size="25" style="display: none" type="number"></p>
 <p><textarea cols="25" id="about_update" placeholder="Описание" rows="5" style="display: none"></textarea></p>
 <p><input id="seasonal_update" size="25" style="display: none" type="checkbox"> <label for="seasonal" id="checkboxLabel"
                                                                                        style="display: none">Сезонное
