--- a/src/main/resources/static/html/products.html
+++ b/src/main/resources/static/html/products.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Продукты</title>
-    <link href="style.css" rel="stylesheet">
-    <script src="js/products.js" type="text/javascript"></script>
+    <link href="../style.css" rel="stylesheet">
+    <script src="../js/products.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
