--- a/src/main/resources/static/html/restaurants.html
+++ b/src/main/resources/static/html/restaurants.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Рестораны сети</title>
-    <link href="employees.css" rel="stylesheet">
-    <script src="js/restaurants.js" type="text/javascript"></script>
+    <link href="../employees.css" rel="stylesheet">
+    <script src="../js/restaurants.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
